# loops-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cli.py  docker-compose.yaml  justfile  pyproject.toml  test_frequency_mapper.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: ci.yml  project-automation.yml
.serena/: project.yml
data/: README.md
docs/: API.md  CARD_SELECTION_ALGORITHM.md  COMMANDS.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_ISSUES_TEMPLATE.md  GITHUB_PROJECTS_SETUP.md  PROJECT_MANAGEMENT.md  README.md  ROADMAP.md  ROADMAP_KR.md  SECURITY_AUDIT.md  TASK_RUNNERS.md  TICKETS.md  TROUBLESHOOTING.md  loops.sql  schema.sql
docs/user-stories/: 02-profile.md  03-vocabulary-cards.md  04-decks.md  05-progress.md  06-quiz.md  07-statistics.md  08-study-session.md  README.md
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2a3b4c5d6e7f_add_review_ratio_settings_to_profile.py  3cc3b28e5a94_initial_clean_schema.py  5d6e7f8g9h0i_add_wrong_answers_table.py  5e0888ee7d18_add_new_cards_count_and_review_cards_.py  84ab4987d315_initial_migration_with_users_table.py  a1b2c3d4e5f6_add_study_sessions_table.py  a2b3c4d5e6f7_add_highlight_color_to_profiles.py  eccc1f1a2c21_add_all_db_schema_updates_user_settings_.py
src/app/: config.py  database.py  main.py
src/app/api/: __init__.py  auth.py  cards.py  decks.py  profiles.py  progress.py  quiz.py  routes.py  stats.py  study.py  users.py
src/app/core/: dependencies.py  exceptions.py  logging.py  security.py
src/app/models/: __init__.py  ai_interaction.py  base.py  deck.py  enums.py  study_session.py  sync_queue.py  user.py  user_card_progress.py  user_deck.py  vocabulary_card.py
src/app/models/schemas/: __init__.py  deck.py  favorite.py  profile.py  quiz.py  stats.py  study.py  user.py  user_card_progress.py  user_selected_deck.py  vocabulary_card.py
src/app/models/tables/: __init__.py  deck.py  favorite.py  profile.py  study_session.py  user.py  user_card_progress.py  user_selected_deck.py  vocabulary_card.py
src/app/services/: cloze_service.py  deck_service.py  profile_service.py  quiz_service.py  study_session_service.py  sync_queue_service.py  user_card_progress_service.py  user_service.py  vocabulary_card_service.py  wrong_answer_service.py
src/scripts/: collect_toefl_data.py  generate_cloze.py  map_frequency.py  seed_data.py  update_cards_via_api.py
tests/: conftest.py
tests/unit/: test_database.py
tests/unit/api/: test_decks_api.py
tests/unit/services/: test_deck_service.py  test_profile_service.py  test_stats_service.py  test_study_session_service.py  test_user_card_progress_service.py  test_vocabulary_card_service.py
