[project]
name = "loops-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "fsrs>=6.3.0",
    "greenlet>=3.2.4",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "supabase>=2.15.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv]
dev-dependencies = ["httpx>=0.28.1"]

[tool.setuptools.packages.find]
where = ["src"]
